--- a/Lucuber/Views/Formula/CardCell/CardFormulaCell.xib
+++ b/Lucuber/Views/Formula/CardCell/CardFormulaCell.xib
@@ -27,48 +27,70 @@
                         </variation>
                     </imageView>
                     <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L2q-zL-u3E">
-                        <rect key="frame" x="10" y="180" width="89" height="17"/>
+                        <rect key="frame" x="10" y="180" width="36" height="17"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qKK-ud-zlO">
-                        <rect key="frame" x="10" y="207" width="150" height="14"/>
+                        <rect key="frame" x="10" y="223" width="150" height="14"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
                         <color key="textColor" white="0.5" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NgG-dw-gTW" customClass="StarRatingView" customModule="Lucuber" customModuleProvider="target">
-                        <rect key="frame" x="115" y="180" width="50" height="15"/>
+                        <rect key="frame" x="9" y="200" width="60" height="10"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="50" id="80s-UI-GuQ"/>
-                            <constraint firstAttribute="height" constant="15" id="gfO-dk-GTO"/>
+                            <constraint firstAttribute="width" constant="60" id="WUr-Ie-Qev"/>
+                            <constraint firstAttribute="height" constant="10" id="e2N-Wo-pbS"/>
                         </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="editable" value="NO"/>
+                            <userDefinedRuntimeAttribute type="number" keyPath="rating">
+                                <integer key="value" value="0"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </view>
+                    <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="三阶" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iE4-Rq-mYV">
+                        <rect key="frame" x="140" y="180" width="20" height="12"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="10"/>
+                        <color key="textColor" white="0.0" alpha="0.40000000000000002" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
             <constraints>
+                <constraint firstItem="NgG-dw-gTW" firstAttribute="top" secondItem="L2q-zL-u3E" secondAttribute="bottom" constant="3" id="0Lv-2i-WUi"/>
                 <constraint firstItem="L2q-zL-u3E" firstAttribute="leading" secondItem="IYm-z0-vqn" secondAttribute="leading" constant="10" id="5Z1-dE-fd4"/>
-                <constraint firstItem="NgG-dw-gTW" firstAttribute="top" secondItem="x83-3g-vda" secondAttribute="bottom" constant="10" id="CFq-Vr-wky"/>
+                <constraint firstAttribute="trailing" secondItem="iE4-Rq-mYV" secondAttribute="trailing" constant="10" id="6In-r8-WNz"/>
+                <constraint firstItem="iE4-Rq-mYV" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="L2q-zL-u3E" secondAttribute="trailing" constant="15" id="6lj-YP-G8a"/>
+                <constraint firstItem="qKK-ud-zlO" firstAttribute="top" secondItem="NgG-dw-gTW" secondAttribute="bottom" constant="13" id="9yG-dv-gAt"/>
                 <constraint firstItem="x83-3g-vda" firstAttribute="top" secondItem="IYm-z0-vqn" secondAttribute="top" id="Cnw-7Y-AYf"/>
+                <constraint firstItem="iE4-Rq-mYV" firstAttribute="top" secondItem="x83-3g-vda" secondAttribute="bottom" constant="10" id="F4v-69-qoL"/>
                 <constraint firstItem="qKK-ud-zlO" firstAttribute="leading" secondItem="L2q-zL-u3E" secondAttribute="leading" id="Hqu-DC-nJX"/>
                 <constraint firstAttribute="trailing" secondItem="qKK-ud-zlO" secondAttribute="trailing" constant="10" id="M4d-e6-Dxv"/>
                 <constraint firstItem="L2q-zL-u3E" firstAttribute="top" secondItem="x83-3g-vda" secondAttribute="bottom" constant="10" id="RXj-Sj-qtS"/>
-                <constraint firstItem="qKK-ud-zlO" firstAttribute="top" secondItem="L2q-zL-u3E" secondAttribute="bottom" constant="10" id="X2H-jQ-YgG"/>
                 <constraint firstItem="x83-3g-vda" firstAttribute="leading" secondItem="IYm-z0-vqn" secondAttribute="leading" id="Ynh-3B-Jw7"/>
                 <constraint firstAttribute="trailing" secondItem="x83-3g-vda" secondAttribute="trailing" id="aGK-qL-Mgu"/>
-                <constraint firstItem="NgG-dw-gTW" firstAttribute="leading" secondItem="L2q-zL-u3E" secondAttribute="trailing" constant="16" id="cbY-VV-Z8W"/>
+                <constraint firstItem="iE4-Rq-mYV" firstAttribute="leading" secondItem="x83-3g-vda" secondAttribute="leading" id="bxK-ML-8xi"/>
                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="qKK-ud-zlO" secondAttribute="bottom" constant="10" id="i71-zI-05g"/>
-                <constraint firstAttribute="trailing" secondItem="NgG-dw-gTW" secondAttribute="trailing" constant="5" id="qvM-Be-Wfu"/>
+                <constraint firstItem="NgG-dw-gTW" firstAttribute="leading" secondItem="L2q-zL-u3E" secondAttribute="leading" constant="-1" id="ijn-9h-WpK"/>
             </constraints>
             <size key="customSize" width="170" height="254"/>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="bxK-ML-8xi"/>
+                </mask>
+            </variation>
             <connections>
                 <outlet property="contentLabel" destination="qKK-ud-zlO" id="Hhx-kh-Fbw"/>
                 <outlet property="imageView" destination="x83-3g-vda" id="WEr-e6-IH9"/>
+                <outlet property="indicaterLabel" destination="iE4-Rq-mYV" id="NpT-qm-yy1"/>
                 <outlet property="nameLabel" destination="L2q-zL-u3E" id="m85-jt-CoQ"/>
                 <outlet property="starRatingView" destination="NgG-dw-gTW" id="OIY-rc-ggt"/>
             </connections>
