--- a/Lucuber/Views/Formula/DetailCell/FormulaDetailSeparatorCell.xib
+++ b/Lucuber/Views/Formula/DetailCell/FormulaDetailSeparatorCell.xib
@@ -6,7 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SeparatorCell" id="gTV-IL-0wX" customClass="SeparatorCell" customModule="Lucuber" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FormulaDetailSeparatorCell" id="gTV-IL-0wX" customClass="FormulaDetailSeparatorCell" customModule="Lucuber" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="244" height="50"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
