--- a/Lucuber/Views/Formula/Backup/DetailCommentCell.xib
+++ b/Lucuber/Views/Formula/Backup/DetailCommentCell.xib
@@ -6,7 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DetailCommentCell" id="KGk-i7-Jjw" customClass="DetailCommentCell" customModule="Lucuber" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="DetailCommentCell" id="KGk-i7-Jjw" customClass="DetailCommentCell" customModule="Lucuber" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -43,6 +43,7 @@
                     <constraint firstItem="WEx-rk-NIs" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="yKX-oX-Zc2"/>
                 </constraints>
             </tableViewCellContentView>
+            <point key="canvasLocation" x="-364" y="100"/>
         </tableViewCell>
     </objects>
     <resources>
